[package]
name = "Final-Project"
version = "0.1.0"
edition = "2021"
authors = ["Eric Kim"]
description = "A project to analyze a Kaggle dataset and identify patterns in housing prices."
repository = "https://github.com/ekim6535/Final-Project"

[dependencies]
csv = "1.1" # For reading and parsing CSV files
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
plotters = "0.3" # For creating visualizations
plotters-svg = "0.3" # For exporting visualizations to SVG/PNG
thiserror = "1.0" # For simplified error handling 
